# nhlelo

./: .gitignore  docker-compose.yml  save.csv  test.csv
.github/workflows/: main.yml
backend/: 20202021_season.py  Dockerfile  apply_elo.py  data.py  db.py  docker-compose.yml  eda.py  elo.py  elo_primer.py  elo_system.py  main.py  prev_season.py  pyproject.toml  requirements.txt  update.py
backend/app/: data.py  data_new.py  elo.py  elo_primer.py  elo_system.py  main.py  nhl_api.py  starting_elo.csv  update.py  utils.py
backend/data/: CurrentELO.csv
backend/old_data/: 20192020season.csv  20202021season.csv  20202021seasonELORESULTS.csv  20202021seasonELOWITHADJ.csv  20202021seasonELOWITHZSCORES.csv  20202021seasonPROCESSED.csv
backend/tests/: test_elo.py
frontend/: package-lock.json  package.json
frontend/components/EloTable/: EloTable.js
frontend/components/EloTableSection/: EloTableSection.js  EloTableSection.module.css  index.js
frontend/components/GameCardSection/: GameCardSection.js  GameCardSection.module.css  index.js
frontend/components/LoadingSpinner/: LoadingSpinner.js  LoadingSpinner.module.css
frontend/components/NavBar/: NavBar.js  NavBar.module.css
frontend/nhl-elo/: package-lock.json  package.json
frontend/nhl-elo/components/Game/: Game.js  Game.module.css
frontend/nhl-elo/components/Layout/: Layout.js
frontend/nhl-elo/pages/: _app.js  index.js  rankings.js  ranks.js
frontend/nhl-elo/styles/: globals.css
frontend/pages/: index.js
frontend/services/: webapi.js
frontend/styles/: globals.css
(+16 files in other folders)
