[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Matthew Mercuri <mercurimatthew@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.26.0"
pandas = "^1.3.3"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
